--- a/style.scss
+++ b/style.scss
@@ -289,6 +289,9 @@ main{
             .submitBtn{
                 width: 150px;
                 height: 35px;
+                color:white;
+                border: 3px solid white;
+                border-radius: 10px;
                 text-indent: 0;
                 cursor: pointer;
                 transition: 0.3s;
