--- a/style.css
+++ b/style.css
@@ -236,6 +236,9 @@ main .contact .contact-form .message:focus {
 main .contact .contact-form .submitBtn {
   width: 150px;
   height: 35px;
+  color: white;
+  border: 3px solid white;
+  border-radius: 10px;
   text-indent: 0;
   cursor: pointer;
   transition: 0.3s;
