--- a/style.css
+++ b/style.css
@@ -251,6 +251,24 @@ main .contact .contact-form .submitBtn:hover {
   border: 1px solid #FFA500;
   color: white;
 }
+main .redirect-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  min-height: 78vh;
+  background-color: #FFA500;
+}
+main .redirect-box .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  padding: 30px;
+  border-radius: 20px;
+}
 
 .showImg {
   width: 100%;
