--- a/style.scss
+++ b/style.scss
@@ -314,7 +314,7 @@ main{
         align-items: center;
         flex-direction: column;
         width: 100%;
-        min-height: 78vh;
+        height: 78vh;
         background-color: $BGcolor;
 
         .container{
