--- a/style.css
+++ b/style.css
@@ -520,6 +520,26 @@ footer .footer-info .footer-contact a {
   main .contact .contact-form .message {
     width: 80%;
   }
+  main .redirect-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 78vh;
+    background-color: #FFA500;
+  }
+  main .redirect-box .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    width: 80%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+  }
   footer {
     padding: 0;
   }
@@ -652,6 +672,26 @@ footer .footer-info .footer-contact a {
   }
   main .contact .contact-form .submitBtn {
     width: 45%;
+  }
+  main .redirect-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 78vh;
+    background-color: #FFA500;
+  }
+  main .redirect-box .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 80%;
+    text-align: center;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
   }
   footer {
     padding: 0;
