--- a/style.scss
+++ b/style.scss
@@ -645,6 +645,29 @@ footer{
             }
         }
 
+        .redirect-box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            height: 78vh;
+            background-color: $BGcolor;
+    
+            .container{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                text-align: center;
+                width: 80%;
+    
+                background-color: white;
+                padding: 30px;
+                border-radius: 20px;
+            }
+        }
+
     }
 
     footer{
@@ -815,6 +838,29 @@ footer{
                 .submitBtn{
                     width: 45%;
                 }
+            }
+        }
+
+        .redirect-box{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            width: 100%;
+            height: 78vh;
+            background-color: $BGcolor;
+    
+            .container{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                width: 80%;
+                text-align: center;
+    
+                background-color: white;
+                padding: 30px;
+                border-radius: 20px;
             }
         }
     }
