--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ header .nav-menu ul li a:hover {
   height: 100px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   z-index: 1;
+  transition: 0.3s;
 }
 
 main {
@@ -68,7 +69,7 @@ main {
   gap: 130px;
 }
 main .user-info {
-  padding: 100px 0;
+  padding: 115px 0;
   display: flex;
   justify-content: center;
   align-items: center;
