--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,8 @@ header{
     justify-content: space-between;
     align-items: center;
     background-color: white;
-    transition: 0.5s;
+    transition: 0.3s;
+    position: fixed;
 
     .title{
         font-size: 55px;
@@ -68,11 +69,9 @@ header{
 }
 
 .sticky{
-    position: fixed;
     height: 100px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(64, 40, 10, 0.35) 0px -2px 6px 0px ;
     z-index: 1;
-    transition: 0.3s;
 }
 
 main{
@@ -85,6 +84,7 @@ main{
     align-items: center;
     flex-direction: column;
     gap: 130px;
+    margin-top: 160px;
 
     .user-info{
         padding: 115px 0;
@@ -743,6 +743,7 @@ footer{
         z-index: 1;
     }
     main{
+        margin-top: unset;
 
         .user-info{
             flex-direction: column;
